@@ -33,6 +33,24 @@
 #ifndef UDPHACK_H
 #define UDPHACK_H
 
+class PUdpHackFail : public PUdpMsgAnalyser
+{
+    public:
+        PUdpHackFail(PMsgDecodeData* nDecodeData);
+        //~PUdpHackFail();
+        PUdpMsgAnalyser* Analyse();
+        bool DoAction();
+};
+
+class PUdpHackSuccess : public PUdpMsgAnalyser
+{
+    public:
+        PUdpHackSuccess(PMsgDecodeData* nDecodeData);
+        //~PUdpHackSuccess();
+        PUdpMsgAnalyser* Analyse();
+        bool DoAction();
+};
+
 class PUdpHackInit : public PUdpMsgAnalyser
 {
     public:
